# StoockFish

./: .gitignore  .tmux  CMakeLists.txt  README.md  main  main.py  output_file
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
src/: board.cpp  config.py  main  main.cpp  renderWindow.cpp
src/board/: :w  __init__.py  bishop.py  board.py  king.py  knight.py  pawn.py  piece.py  queen.py  rook.py
src/headers/: board.h  defs.h  renderWindow.h
